# Esp32board

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  application.cpp  application.h  idf_component.yml  main.cpp
main/assets/: lang_config.h
main/boards/: board.cpp  board.h  esp32_wifi_board.cpp  esp32_wifi_board.h  wifi_board.cpp  wifi_board.h
main/boards/bread-compact-esp32/: esp32_bread_board.cpp
main/boards/bread-compact-wifi/: config.h
main/boards/common/: wifi_board.cpp  wifi_board.h
main/display/: display.cpp  display.h  oled_display.cpp
main/protocols/: mqtt_protocol.cpp
